--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -6395,7 +6395,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deployment"
+    "## Deployment\n",
+    "\n",
+    "To deploy the model, I created an API using Flask and deployed it on Heroku to handle requests. You can send POST requests with customer information, and the API responds with the predicted loan status of the customer.\n",
+    "\n",
+    "\n",
+    "on the README accompanied with this notebook i have documented the format to send the requests. The API can be found at [API Endpoint](https://loan-prediction-api-9f068a1898db.herokuapp.com/)\n",
+    "\n",
+    "The detailed request format and examples are documented in the README accompanying this notebook.\n",
+    "\n",
+    "**Challenges in a Real-Time Environment and Their Solutions**\n",
+    "- As new data becomes available, the model may need to be retrained and redeployed. I would implement a CI/CD pipeline to automate the deployment process, allowing for seamless updates without downtime.\n",
+    "  \n",
+    "- **Latency**: Real-time predictions need to be fast. Optimize the model and use efficient data processing techniques to reduce latency. I would implement caching mechanisms for frequently requested data.\n",
+    "\n",
+    "**Monitoring Model Performance Post-Deployment**\n",
+    "- Collect feedback on the model’s predictions and use it to improve the model. For instance, track the actual loan repayment behavior of customers and compare it to the model’s predictions.\n",
+    "  \n",
+    "-  Schedule regular retraining of the model with new data to ensure it remains up-to-date and accurate. Automate the retraining process to minimize manual intervention.\n"
    ]
   },
   {
@@ -6409,6 +6426,86 @@
     "#with open('model.pkl', 'wb') as f:\n",
     " #   joblib.dump(mvp_model, f)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['loan_amnt', 'term', 'int_rate', 'grade', 'sub_grade', 'emp_title',\n",
+       "       'emp_length', 'home_ownership', 'annual_inc', 'verification_status',\n",
+       "       'purpose', 'dti', 'earliest_cr_line', 'open_acc', 'pub_rec',\n",
+       "       'revol_bal', 'revol_util', 'total_acc', 'initial_list_status',\n",
+       "       'application_type', 'mort_acc', 'pub_rec_bankruptcies', 'zip_code'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [500]>"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = requests.post(\n",
+    "    url=\"https://loan-prediction-api-9f068a1898db.herokuapp.com/predict\",\n",
+    "    \n",
+    "    json={\n",
+    "        \"loan_amnt\": 8000,\n",
+    "        \"term\": '36 months',\n",
+    "        \"int_rate\": 11.8,\n",
+    "        \"grade\": 'B',\n",
+    "        \"sub_grade\":'B5',\n",
+    "        \"home_ownership\": 'MORTGAGE',\n",
+    "        \"annual_inc\": 90000,\n",
+    "        \"verification_status\": 'Not Verified',\n",
+    "        \"purpose\": 'credit_card',\n",
+    "        \"dti\": 22.05,\n",
+    "        \"earliest_cr_line\": 2004,\n",
+    "        \"open_acc\": 17,\n",
+    "        \"pub_rec\": 0,\n",
+    "        \"revol_bal\": 20131,\n",
+    "        \"revol_util\": 53.01,\n",
+    "        \"total_acc\": 27,\n",
+    "        \"initial_list_status\": 'f',\n",
+    "        \"application_type\": 'INDIVIDUAL',\n",
+    "        \"mort_acc\": 3,\n",
+    "        \"pub_rec_bankruptcies\": 0,\n",
+    "        \"zip_code\": '05113'}\n",
+    ")\n",
+    "response"
    ]
   }
  ],
