Pin NumPy version to 1.21.0

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -6464,7 +6464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -6473,7 +6473,7 @@
        "<Response [500]>"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6488,6 +6488,8 @@
     "        \"int_rate\": 11.8,\n",
     "        \"grade\": 'B',\n",
     "        \"sub_grade\":'B5',\n",
+    "        \"emp_title\": 'consultant',\n",
+    "        \"emp_length\": '3 years',\n",
     "        \"home_ownership\": 'MORTGAGE',\n",
     "        \"annual_inc\": 90000,\n",
     "        \"verification_status\": 'Not Verified',\n",
@@ -6503,7 +6505,8 @@
     "        \"application_type\": 'INDIVIDUAL',\n",
     "        \"mort_acc\": 3,\n",
     "        \"pub_rec_bankruptcies\": 0,\n",
-    "        \"zip_code\": '05113'}\n",
+    "        \"zip_code\": '05113'   \n",
+    "    }\n",
     ")\n",
     "response"
    ]
