Pin NumPy version to 1.21.0

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -6430,31 +6430,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['loan_amnt', 'term', 'int_rate', 'grade', 'sub_grade', 'emp_title',\n",
-       "       'emp_length', 'home_ownership', 'annual_inc', 'verification_status',\n",
-       "       'purpose', 'dti', 'earliest_cr_line', 'open_acc', 'pub_rec',\n",
-       "       'revol_bal', 'revol_util', 'total_acc', 'initial_list_status',\n",
-       "       'application_type', 'mort_acc', 'pub_rec_bankruptcies', 'zip_code'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 293,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 290,
    "metadata": {},
    "outputs": [],
@@ -6464,7 +6439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -6473,12 +6448,13 @@
        "<Response [500]>"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Testing the depoloyed API\n",
     "response = requests.post(\n",
     "    url=\"https://loan-prediction-api-9f068a1898db.herokuapp.com/predict\",\n",
     "    \n",
