--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -6439,16 +6439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "<Response [500]>"
       ]
      },
-     "execution_count": 329,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6456,7 +6456,7 @@
    "source": [
     "#Testing the depoloyed API\n",
     "response = requests.post(\n",
-    "    url=\"http://127.0.0.1:5000/predict\",\n",
+    "    url=\"https://loan-prediction-api-9f068a1898db.herokuapp.com/predict\",\n",
     "    \n",
     "    json={\n",
     "        \"loan_amnt\": 8000,\n",
