--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -6555,10 +6555,14 @@
    "source": [
     "## Deployment\n",
     "\n",
-    "To deploy the model, I created an API using Flask and deployed it on Heroku to handle requests. You can send POST requests with customer information, and the API responds with the predicted loan status of the customer.\n",
+    "To deploy the model, I created an app using Flask and deployed it on render where you can key in customer information then click on `PREDICT` button then the app will give you the predicted loan status.\n",
+    "\n",
+    "The app can be found at [Loan Default Detection App](https://loan-default-prediction-l8mf.onrender.com/)\n",
+    "\n",
+    "You can also send POST requests with customer information, to the `/predict` endpoint and the API responds with the predicted loan status of the customer. You can also access the api documentation on the `/api-documnetation` endpoint.\n",
     "\n",
     "\n",
-    "On the README accompanied with this notebook I have documented the format to send the requests. The API can be found at [API Endpoint](https://loan-prediction-api-9f068a1898db.herokuapp.com/)\n",
+    "On the README accompanied with this notebook I have documented the format to send the requests. \n",
     "\n",
     "\n",
     "**Challenges in a Real-Time Environment and Their Solutions**\n",
@@ -6586,7 +6590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -6595,7 +6599,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6604,7 +6608,7 @@
     "#Testing the depoloyed API\n",
     "import requests\n",
     "response = requests.post(\n",
-    "    url=\"http://127.0.0.1:5000/predict\",\n",
+    "    url=\"https://loan-default-prediction-l8mf.onrender.com/predict\",\n",
     "    \n",
     "    json={\n",
     "        \"loan_amnt\": 20000,\n",
@@ -6637,16 +6641,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Predicted Loan Status': 'Default Risk'}"
+       "{'prediction': 1}"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
